hard-gists/7e173302952b210aeaf3/run.log
=== Docker Run Log for 7e173302952b210aeaf3 ===
Started at: Mi 29. Okt 17:32:40 CET 2025

[2025-10-29 17:32:41] START: Running container for 7e173302952b210aeaf3
[2025-10-29 17:32:41] SUCCESS: Container 5f53d11cc5745234bc170e8fa40c02eb907f0e042f50e223ab2b4f201009b8e6 started for 7e173302952b210aeaf3
=== Container logs for 7e173302952b210aeaf3 ===
  File "/snippet.py", line 96
    print "times for 1 million calls"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7e173302952b210aeaf3 ===
[2025-10-29 17:32:43] INFO: Container 5f53d11cc5745234bc170e8fa40c02eb907f0e042f50e223ab2b4f201009b8e6 has stopped
